# weather-logger

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  test_weather.py  weather.py
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  CSV_SCHEMA.md
examples/: basic_usage.sh  cron_setup.md
